<resources>
    <string name="app_name">BarbersApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">abdulwahid@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="developer">Developer</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Lupa Password ?</string>
    <string name="btnLogin">LOGIN</string>
    <string name="biometric">Atau login dengan Biometric</string>
    <string name="akun">Belum Punya Akun ?</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome...</string>
    <string name="please">Please login to find out more information \n and our lastest information</string>
    <string name="created">Created By Abdul Wahid</string>
    <string name="todo">TODO</string>
    <string name="garis1">______</string>
    <string name="garis2">______</string>
</resources>